--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ img {
 /*======HEADER====== */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -103,11 +105,29 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.header-link.current {
+  /* position: relative; */
+}
+
+.header-link.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
 }
 
 .header-link:hover,
 .header-link:active,
-.header-link:focus {
+.header-link:focus,
+.header-link.current {
   color: #404bbf;
 }
 
@@ -130,6 +150,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -140,7 +161,14 @@ img {
 /* ===HERO=== */
 .hero {
   background: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-bg.jpg);
   padding: 188px 0;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 .hero-title {
   font-size: 56px;
@@ -220,6 +248,16 @@ img {
   display: flex;
   gap: 24px;
 }
+
+/* .deskr-box {
+  width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+} */
 
 .description-list-item {
   width: calc((100% - 72px) / 4);
