--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ img {
 .header-link:focus,
 .header-link.current {
   color: #404bbf;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -156,6 +157,7 @@ img {
 .address-link:hover,
 .address-link:focus {
   color: #404bbf;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ===HERO=== */
@@ -169,7 +171,11 @@ img {
   padding: 188px 0;
   max-width: 1440px;
   margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
+
 .hero-title {
   font-size: 56px;
   /* line-height: 60px; */
@@ -209,11 +215,13 @@ img {
   border: none;
   border-radius: 4px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
   background-color: #404bbf;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ===DESCRIPTION */
@@ -249,15 +257,21 @@ img {
   gap: 24px;
 }
 
-/* .deskr-box {
-  width: 264px;
+.deskr-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 112px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  width: 264px;
-  height: 112px;
-  background: #f4f4fd;
-} */
+  background-color: #f4f4fd;
+  margin-bottom: 8px;
+}
+
+.deskr-icon {
+  width: 64px;
+  height: 64px;
+}
 
 .description-list-item {
   width: calc((100% - 72px) / 4);
@@ -294,9 +308,12 @@ img {
   background: #fff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-list-img {
 }
+
 .team-list-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -307,6 +324,7 @@ img {
   color: #2e2f42;
   margin-bottom: 8px;
 }
+
 .team-list-text {
   font-size: 16px;
   /* line-height: 24px; */
@@ -314,10 +332,44 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-bottom: 8px;
+}
+
+.social-media-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 
 .item-container {
   padding: 32px 0;
+}
+
+.social-media-item {
+  width: 40px;
+  height: 40px;
+}
+
+.social-media-icon {
+  width: 16px;
+  height: 16px;
+  fill: #f4f4fd;
+}
+
+.social-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-media-link:hover,
+.social-media-link:focus {
+  background-color: #404bbf;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ===PORTFOLIO=== */
@@ -325,6 +377,7 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .portfolio-title {
   text-transform: capitalize;
   font-size: 36px;
@@ -345,9 +398,41 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  ransition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .cover-text {
+  transform: translate(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-img {
+}
+
+.cover {
+  position: relative;
+  overflow: hidden;
+}
+
+.cover-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-container {
@@ -365,12 +450,18 @@ img {
   color: #2e2f42;
   margin-bottom: 8px;
 }
+
 .portfolio-text {
   font-size: 16px;
   /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+
+.item-icon {
+  width: 40px;
+  height: 40px;
 }
 
 /*===FOOTER===*/
@@ -380,11 +471,21 @@ img {
   background-color: #2e2f42;
 }
 
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-wrapper {
+  margin-right: 120px;
+}
+
 .footer-logo {
   font-family: "Raleway", sans-serif;
   display: inline-block;
   margin-bottom: 16px;
 }
+
 .footer-logo-accent {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -395,6 +496,7 @@ img {
   text-transform: uppercase;
   color: #f4f4fd;
 }
+
 .footer-text {
   font-size: 16px;
   /* line-height: 24px; */
@@ -402,4 +504,47 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+
+.social-media-text {
+  font-weight: 500;
+  font-size: 16px;
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-media-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-media-item {
+  width: 40px;
+  height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-media-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-media-link:hover,
+.footer-media-link:focus {
+  background-color: #31d0aa;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-media-icon {
+  width: 24px;
+  height: 24px;
+  fill: #f4f4fd;
 }
