--- a/css/styles.css
+++ b/css/styles.css
@@ -268,11 +268,6 @@ img {
   margin-bottom: 8px;
 }
 
-.deskr-icon {
-  width: 64px;
-  height: 64px;
-}
-
 .description-list-item {
   width: calc((100% - 72px) / 4);
 }
@@ -351,8 +346,6 @@ img {
 }
 
 .social-media-icon {
-  width: 16px;
-  height: 16px;
   fill: #f4f4fd;
 }
 
@@ -364,6 +357,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-link:hover,
@@ -398,7 +392,7 @@ img {
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  ransition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover {
@@ -544,7 +538,5 @@ img {
 }
 
 .footer-media-icon {
-  width: 24px;
-  height: 24px;
   fill: #f4f4fd;
 }
