--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ img {
   padding: 24px 0;
   margin-right: 76px;
 }
+
 .header-logo,
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -73,6 +74,7 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
 }
+
 .header-logo-accent {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -83,11 +85,13 @@ img {
   text-transform: uppercase;
   color: #2e2f42;
 }
+
 .header-list {
   display: flex;
   align-items: center;
   gap: 40px;
 }
+
 .header-item {
   font-weight: 500;
   font-size: 16px;
@@ -96,6 +100,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+
 .header-link {
   display: block;
   padding: 24px 0;
@@ -106,11 +111,11 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  position: relative;
 }
 
-.header-link.current {
-  /* position: relative; */
+.current {
+  position: relative;
+  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link.current::after {
@@ -271,6 +276,7 @@ img {
 .description-list-item {
   width: calc((100% - 72px) / 4);
 }
+
 .description-text {
   font-size: 16px;
   /* line-height: 24px; */
@@ -284,6 +290,7 @@ img {
   background: #f4f4fd;
   padding: 120px 0;
 }
+
 .team-title {
   text-transform: capitalize;
   font-size: 36px;
@@ -294,10 +301,12 @@ img {
   color: #2e2f42;
   margin-bottom: 72px;
 }
+
 .team-list {
   display: flex;
   gap: 24px;
 }
+
 .team-list-item {
   color: #2e2f42;
   background: #fff;
@@ -306,6 +315,7 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 .team-list-img {
 }
 
@@ -350,6 +360,7 @@ img {
 }
 
 .social-media-link {
+  transition-property: transform;
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -529,6 +540,7 @@ img {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-link:hover,
