--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ img {
 
 /*======HEADER====== */
 .header {
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;Add commentMore actions
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
@@ -113,7 +113,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current {
+.header-link.current {
   position: relative;
 }
 
@@ -129,11 +129,9 @@ img {
 }
 
 .header-link:hover,
-.header-link:active,
 .header-link:focus,
 .header-link.current {
   color: #404bbf;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -161,7 +159,6 @@ img {
 .address-link:hover,
 .address-link:focus {
   color: #404bbf;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ===HERO=== */
