--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,9 @@ img {
 
 /*======HEADER====== */
 .header {
-  border-bottom: 1px solid #e7e9fc;Add commentMore actions
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -369,7 +369,7 @@ img {
 .social-media-link:hover,
 .social-media-link:focus {
   background-color: #404bbf;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 /* ===PORTFOLIO=== */
@@ -524,7 +524,7 @@ img {
 .footer-media-item {
   width: 40px;
   height: 40px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .footer-media-link {
