--- a/css/styles.css
+++ b/css/styles.css
@@ -524,7 +524,6 @@ img {
 .footer-media-item {
   width: 40px;
   height: 40px;
-  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .footer-media-link {
@@ -541,7 +540,7 @@ img {
 .footer-media-link:hover,
 .footer-media-link:focus {
   background-color: #31d0aa;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .footer-media-icon {
